loading should now work

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Written in SASS, uncompiled files are in the same directory. */
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,700,800");
 body {
   margin: 0;
   padding: 0;
@@ -14,8 +14,17 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
   grid-gap: 1rem;
   grid-auto-flow: row dense;
-  grid-auto-rows: 250px; }
+  grid-auto-rows: 250px;
+  animation: load-in 2000ms ease-out forwards; }
 
+.js-loading * {
+  animation-play-state: paused !important; }
+
+@keyframes load-in {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 @media screen and (min-width: 382px) {
   .grid {
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); } }
@@ -26,7 +35,7 @@ body {
   overflow: hidden;
   transition: all 220ms ease-in-out; }
   .reg--item:hover .item--inner, .reg--item:focus .item--inner {
-    transform: scale(1.1);
+    transform: scale(1.05);
     transition: all 220ms ease-in-out; }
   .reg--item:hover .item--overlay, .reg--item:focus .item--overlay {
     background-color: rgba(13, 13, 13, 0.6);
@@ -83,6 +92,10 @@ body {
 
   .wide--item {
     grid-column-end: span 2; } }
+@media screen and (min-width: 1360px) {
+  .grid {
+    margin: 1.5rem;
+    width: calc(100% - 3rem); } }
 .item--1 {
   background-image: url(https://images.unsplash.com/photo-1499781350541-7783f6c6a0c8?ixlib=rb-0.3.5&s=44608053c9aec36fffb639e3936884ac&auto=format&fit=crop&w=2015&q=80); }
 
