--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,3 @@
-/* Written in SASS, uncompiled files are in the same directory. */
-
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700,800');
 body {
   margin: 0;
@@ -15,6 +13,18 @@ body {
   grid-gap: 1rem;
   grid-auto-flow: row dense;
   grid-auto-rows: 250px;
+  animation: load-in 2000ms ease-out forwards;
+}
+.js-loading * {
+  animation-play-state: paused !important;
+}
+@keyframes load-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 @media screen and (min-width: 382px) {
   .grid {
@@ -29,7 +39,7 @@ body {
   transition: all 220ms ease-in-out;
   &:hover, &:focus {
     .item--inner {
-      transform: scale(1.1);
+      transform: scale(1.05);
       transition: all 220ms ease-in-out;
     }
     .item--overlay {
@@ -88,6 +98,12 @@ body {
   }
   .wide--item {
     grid-column-end: span 2;
+  }
+}
+@media screen and (min-width: 1360px) {
+  .grid {
+    margin: 1.5rem;
+    width: calc(100% - 3rem);    
   }
 }
 .item--1 {
