--- a/scss/style.scss
+++ b/scss/style.scss
@@ -112,17 +112,18 @@ body {
   align-self: center;
 }
 .intro--header {
-  margin-top: -1rem;
+  margin: -1rem auto 2rem auto;
   font-size: 3rem;
   font-weight: 700;
-  text-align: center;
+  text-align: left;
+  max-width: 700px;
 }
 .intro--text {
   margin: 0 auto;
   font-size: 1.2rem;
-  text-align: center;
+  text-align: left;
   font-weight: 300;
-  line-height: 2.2rem;
+  line-height: 2rem;
   max-width: 700px;
 }
 @media screen and (min-width: 767px) {
