Actually updated now.

--- a/css/style.css
+++ b/css/style.css
@@ -123,19 +123,22 @@ body {
 }
 
 .intro--header {
-  margin-top: -1rem;
+  margin: -1rem auto 2rem auto;
   font-size: 3rem;
   font-weight: 700;
-  text-align: center;
+  text-align: left;
+  max-width: 700px;
+  letter-spacing: -2px;
 }
 
 .intro--text {
   margin: 0 auto;
   font-size: 1.2rem;
-  text-align: center;
+  text-align: left;
   font-weight: 300;
   line-height: 2.2rem;
   max-width: 700px;
+  letter-spacing: 0;
 }
 
 @media screen and (min-width: 767px) {
@@ -153,7 +156,7 @@ body {
 
   .intro--text {
     font-size: 1.4rem;
-    line-height: 2.8rem;
+    line-height: 2.4rem;
   }
 }
 .item--1 {
