--- a/scss/style.scss
+++ b/scss/style.scss
@@ -190,6 +190,21 @@ body {
 .item--16 {
   background-image: url(https://images.unsplash.com/photo-1490535004195-099bc723fa1f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=53d16e51c95625168dde435dbd0aaa45&auto=format&fit=crop&w=1480&q=80);
 }
+.item--17 {
+  background-image: url(https://images.unsplash.com/photo-1504685641750-680d1a6a5536?ixlib=rb-0.3.5&s=8f6fa37ef4f22205aae60998daf165f1&auto=format&fit=crop&w=800&q=80);
+}
+.item--18 {
+  background-image: url(https://images.unsplash.com/photo-1505868900972-a7ed025e680b?ixlib=rb-0.3.5&s=9c76413dbf299dae03c8b2aeb6db39a5&auto=format&fit=crop&w=1350&q=80);
+}
+.item--19 {
+  background-image: url(https://images.unsplash.com/photo-1508341421810-36b8fc06075b?ixlib=rb-0.3.5&s=40aa58c6e0450d4e2e4b7da8a440afe5&auto=format&fit=crop&w=2567&q=80);
+}
+.item--20 {
+  background-image: url(https://images.unsplash.com/photo-1503442421232-da6e4efd1d23?ixlib=rb-0.3.5&s=2a32e84e3e6d26670d3e87ac54edb998&auto=format&fit=crop&w=1343&q=80);
+}
+.item--21 {
+  background-image: url(https://images.unsplash.com/photo-1505771582525-59a79c60af24?ixlib=rb-0.3.5&s=44d17c15b3bd53bc97a6ce7c53579649&auto=format&fit=crop&w=2689&q=80);
+}
 .centering {
   display: block;
   width: 100%;
