--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,9 @@
 body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(to bottom right, rgb(89, 0, 255), rgb(255, 40, 222));
+  background: linear-gradient(to bottom right, rgba(89, 0, 255, .9), rgba(255, 40, 222, .9)), url(https://images.unsplash.com/photo-1496715976403-7e36dc43f17b?ixlib=rb-0.3.5&s=0d64e651b3d3236851acd0335720dcbd&auto=format&fit=crop&w=1350&q=80);
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: 'Helvetica Neue', 'Montserrat', sans-serif; font-size: 100%;
   color: white;
 }
