--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ body {
 .item--text .item--name {
   font-weight: 800;
   font-size: 1.5rem;
-  padding-bottom: .8rem;
+  line-height: 1.25;
 }
 .item--text .item--more {
   color: #FFF;
@@ -108,6 +108,7 @@ body {
   border-bottom: 2px solid #FFF;
   transition: all 220ms ease-in-out;
   font-weight: 400;
+  line-height: 1.5;
 }
 .item--text .item--more:hover {
   cursor: pointer;
@@ -125,8 +126,9 @@ body {
 }
 
 .intro--header {
-  margin: -1rem auto 2rem auto;
+  margin: -1rem auto 0 auto;
   font-size: 3rem;
+  line-height: 2;
   font-weight: 700;
   text-align: left;
   max-width: 700px;
@@ -138,7 +140,7 @@ body {
   font-size: 1.2rem;
   text-align: left;
   font-weight: 300;
-  line-height: 2.2rem;
+  line-height: 1.5;
   max-width: 700px;
   letter-spacing: 0;
 }
@@ -158,7 +160,6 @@ body {
 
   .intro--text {
     font-size: 1.4rem;
-    line-height: 2.4rem;
   }
 }
 .item--1 {
