--- a/scss/style.scss
+++ b/scss/style.scss
@@ -89,7 +89,7 @@ body {
   text-align: center;
   .item--name {
     font-weight: 800; font-size: 1.5rem;
-    padding-bottom: .8rem;
+    line-height: 1.25;
   }
   .item--more {
     color: #FFF;
@@ -98,6 +98,7 @@ body {
     border-bottom: 2px solid #FFF;
     transition: all 220ms ease-in-out;
     font-weight: 400;
+    line-height: 1.5;
     &:hover {
       cursor: pointer;
       color: rgb(255, 40, 222);
@@ -114,8 +115,9 @@ body {
   align-self: center;
 }
 .intro--header {
-  margin: -1rem auto 2rem auto;
+  margin: -1rem auto 0 auto;
   font-size: 3rem;
+  line-height: 2;
   font-weight: 700;
   text-align: left;
   max-width: 700px;
@@ -126,7 +128,7 @@ body {
   font-size: 1.2rem;
   text-align: left;
   font-weight: 300;
-  line-height: 2.2rem;
+  line-height: 1.5;
   max-width: 700px;
   letter-spacing: 0;
 }
@@ -141,7 +143,7 @@ body {
     font-size: 4rem;
   }
   .intro--text {
-    font-size: 1.4rem; line-height: 2.4rem;
+    font-size: 1.4rem;
   }
 }
 .item--1 {
