Changed background images to image tag.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,700,800');
-
 body {
   margin: 0;
   padding: 0;
   background: linear-gradient(to bottom right, rgba(89, 0, 255, .9), rgba(255, 40, 222, .9)), url(https://images.unsplash.com/photo-1496715976403-7e36dc43f17b?ixlib=rb-0.3.5&s=0d64e651b3d3236851acd0335720dcbd&auto=format&fit=crop&w=1350&q=80);
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: 'Helvetica Neue', 'Montserrat', sans-serif; font-size: 100%;
+  font-family: 'Avenir Next', 'Helvetica Neue', 'Montserrat', sans-serif; font-size: 100%;
   color: white;
 }
 .grid {
@@ -15,8 +14,8 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
   grid-gap: 1rem;
-  grid-auto-flow: row dense;
   grid-auto-rows: 250px;
+  grid-auto-flow: row dense;
   opacity: 0;
   animation: load-in 2000ms ease-out forwards;
 }
@@ -43,10 +42,11 @@ body {
   height: auto;
   width: auto;
   overflow: hidden;
-  transition: all 220ms ease-in-out;
+  transform: none;
+  transition: opacity 1000ms ease-in-out, transform 800ms ease-in-out;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   &:hover, &:focus {
-    .item--inner {
+    .item--img {
       transform: scale(1.05);
       transition: all 220ms ease-in-out;
     }
@@ -67,18 +67,6 @@ body {
   width: 100%;
   z-index: 3;
   transition: all 220ms ease-in-out;
-}
-.item--inner {
-  position: absolute;
-  top: 0; left: 0;
-  height: 100%;
-  width: 100%;
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  transform: none;
-  transition: all 220ms ease-in-out; 
-  z-index: 2;
 }
 .item--text {
   position: absolute;
@@ -108,6 +96,12 @@ body {
     }
   }
 }
+.item--img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 220ms ease-in-out;
+}
 .grid--intro {
   grid-column: 1/-1;
   grid-row-end: span 2;
@@ -122,7 +116,7 @@ body {
   font-weight: 700;
   text-align: left;
   max-width: 700px;
-  letter-spacing: -2px;
+  letter-spacing: -4px;
 }
 .intro--text {
   margin: 0 auto;
@@ -131,7 +125,7 @@ body {
   font-weight: 300;
   line-height: 1.5;
   max-width: 700px;
-  letter-spacing: 0;
+  letter-spacing: -1px;
 }
 @media screen and (min-width: 767px) {
   .tall--item {
@@ -147,78 +141,7 @@ body {
     font-size: 1.4rem;
   }
 }
-.item--1 {
-  background-image: url(https://images.unsplash.com/photo-1499781350541-7783f6c6a0c8?ixlib=rb-0.3.5&s=44608053c9aec36fffb639e3936884ac&auto=format&fit=crop&w=2015&q=80);
-}
-.item--2 {
-  background-image: url(https://images.unsplash.com/photo-1501421018470-faf26f6b1bef?ixlib=rb-0.3.5&s=aece461743812241e24a9528dc0fdb64&auto=format&fit=crop&w=1950&q=80);
-}
-.item--3 {
-  background-image: url(https://images.unsplash.com/photo-1503259901638-6bf44a4cd670?ixlib=rb-0.3.5&s=1d35913f04b30cf5027fe2f09a7371d9&auto=format&fit=crop&w=1294&q=80);
-}
-.item--4 {
-  background-image: url(https://images.unsplash.com/photo-1491403938640-b57372002c94?ixlib=rb-0.3.5&s=2835b62d602bfedee80fafb60a90dc19&auto=format&fit=crop&w=1350&q=80);
-}
-.item--5 {
-  background-image: url(https://images.unsplash.com/photo-1502210220257-b267d9c86214?ixlib=rb-0.3.5&s=a856ee8f49413731084c1d113d330bc4&auto=format&fit=crop&w=1350&q=80);
-}
-.item--6 {
-  background-image: url(https://images.unsplash.com/photo-1490487135801-031cf13ab462?ixlib=rb-0.3.5&s=b424db189618b2b9dbdd222fca08e6b5&auto=format&fit=crop&w=1352&q=80);
-}
-.item--7 {
-  background-image: url(https://images.unsplash.com/photo-1501569420805-e4dd535ec970?ixlib=rb-0.3.5&s=f9fc15799cbd406b806ea8e306381e43&auto=format&fit=crop&w=1350&q=80);
-}
-.item--8 {
-  background-image: url(https://images.unsplash.com/photo-1463277261818-d24c3cdbe40e?ixlib=rb-0.3.5&s=9a19eee02877074ccb33e9e669f10dab&auto=format&fit=crop&w=634&q=80);
-}
-.item--9 {
-  background-image: url(https://images.unsplash.com/photo-1497033110244-bb22d252704e?ixlib=rb-0.3.5&s=0563070b66661f968073a5ea4f96af99&auto=format&fit=crop&w=1371&q=80);
-}
-.item--10 {
-  background-image: url(https://images.unsplash.com/photo-1514575619841-1a3d949d3277?ixlib=rb-0.3.5&s=cd492506d8101a9382bf1359ac955c75&auto=format&fit=crop&w=564&q=80);
-}
-.item--11 {
-  background-image: url(https://images.unsplash.com/photo-1502868032459-aa78309e3503?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a6cda7a50c043155f3c0a9b6960a9eff&auto=format&fit=crop&w=1350&q=80);
-}
-.item--12 {
-  background-image: url(https://images.unsplash.com/photo-1453814235491-3cfac3999928?ixlib=rb-0.3.5&s=528b061cef02f0c33c50f2b05e8b5619&auto=format&fit=crop&w=1350&q=80);
-}
-.item--13 {
-  background-image: url(https://images.unsplash.com/photo-1495482432709-15807c8b3e2b?ixlib=rb-0.3.5&s=6d360685125b642b273028564997fbc3&auto=format&fit=crop&w=1352&q=80);
-}
-.item--14 {
-  background-image: url(https://images.unsplash.com/photo-1517696600874-1d19b7e42b21?ixlib=rb-0.3.5&s=94d7c303227a36ca61313291559a9626&auto=format&fit=crop&w=1950&q=80);
-}
-.item--15 {
-  background-image: url(https://images.unsplash.com/photo-1498484350622-344a7eab522f?ixlib=rb-0.3.5&s=4aaa35d2dcceebfbf91e8a770a67f6e4&auto=format&fit=crop&w=1350&q=80);
-}
-.item--16 {
-  background-image: url(https://images.unsplash.com/photo-1490535004195-099bc723fa1f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=53d16e51c95625168dde435dbd0aaa45&auto=format&fit=crop&w=1480&q=80);
-}
-.item--17 {
-  background-image: url(https://images.unsplash.com/photo-1504685641750-680d1a6a5536?ixlib=rb-0.3.5&s=8f6fa37ef4f22205aae60998daf165f1&auto=format&fit=crop&w=800&q=80);
-}
-.item--18 {
-  background-image: url(https://images.unsplash.com/photo-1505868900972-a7ed025e680b?ixlib=rb-0.3.5&s=9c76413dbf299dae03c8b2aeb6db39a5&auto=format&fit=crop&w=1350&q=80);
-}
-.item--19 {
-  background-image: url(https://images.unsplash.com/photo-1508341421810-36b8fc06075b?ixlib=rb-0.3.5&s=40aa58c6e0450d4e2e4b7da8a440afe5&auto=format&fit=crop&w=2567&q=80);
-}
-.item--20 {
-  background-image: url(https://images.unsplash.com/photo-1503442421232-da6e4efd1d23?ixlib=rb-0.3.5&s=2a32e84e3e6d26670d3e87ac54edb998&auto=format&fit=crop&w=1343&q=80);
-}
-.item--21 {
-  background-image: url(https://images.unsplash.com/photo-1505771582525-59a79c60af24?ixlib=rb-0.3.5&s=44d17c15b3bd53bc97a6ce7c53579649&auto=format&fit=crop&w=2689&q=80);
-}
-.item--22 {
-  background-image: url(https://images.unsplash.com/photo-1490289438248-56f597396eca?ixlib=rb-0.3.5&s=809f505bb340fbacac1ef9e14dce23de&auto=format&fit=crop&w=1350&q=80);
-}
-.item--23 {
-  background-image: url(https://images.unsplash.com/photo-1503169483-419b860b9208?ixlib=rb-0.3.5&s=c112e3a0571af6a5db0fc948eedde3d9&auto=format&fit=crop&w=934&q=80);
-}
-.item--24 {
-  background-image: url(https://images.unsplash.com/photo-1495106245177-55dc6f43e83f?ixlib=rb-0.3.5&s=c5139029b539196374a27806c0f10503&auto=format&fit=crop&w=1350&q=80);
-}
+
 .centering {
   display: block;
   width: 100%;
@@ -265,7 +188,6 @@ body {
     transform: translate(-50%, -50%) rotateZ(720deg);
   }  
 }
-/*
 @keyframes spinner {
   0% {
     transform: rotateZ(0deg) scale(1);
@@ -275,9 +197,8 @@ body {
   }
   100% {
     transform: rotateZ(720deg) scale(1);
-  }
+  }  
 }
-*/
 .hide {
   opacity: 0;
   height: 0;
@@ -292,7 +213,17 @@ body {
   font-family: 'Helvetica Neue', 'Montserrat', sans-serif; font-weight: 600; font-size: 1rem;
   background: linear-gradient(to right, rgba(255, 40, 222, .9), rgba(89, 0, 255, .9)); color: white;
   border: 3px solid white; border-radius: 30px;
+  transition: all 220ms ease-in-out;
+  transform: none;
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+    transition: transform 220ms ease-in-out;
+  }
 }
 .hidden {
-  display: none;
+  opacity: 0;
+  height: 0;
+  position: absolute;
+  transform: translateY(-1rem);
 }
