--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   background: linear-gradient(to bottom right, rgba(89, 0, 255, 0.9), rgba(255, 40, 222, 0.9)), url(https://images.unsplash.com/photo-1496715976403-7e36dc43f17b?ixlib=rb-0.3.5&s=0d64e651b3d3236851acd0335720dcbd&auto=format&fit=crop&w=1350&q=80);
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: 'Helvetica Neue', 'Montserrat', sans-serif;
+  font-family: 'Avenir Next', 'Helvetica Neue', 'Montserrat', sans-serif;
   font-size: 100%;
   color: white;
 }
@@ -16,8 +16,8 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
   grid-gap: 1rem;
-  grid-auto-flow: row dense;
   grid-auto-rows: 250px;
+  grid-auto-flow: row dense;
   opacity: 0;
   animation: load-in 2000ms ease-out forwards;
 }
@@ -46,10 +46,11 @@ body {
   height: auto;
   width: auto;
   overflow: hidden;
-  transition: all 220ms ease-in-out;
+  transform: none;
+  transition: opacity 1000ms ease-in-out, transform 800ms ease-in-out;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
-.reg--item:hover .item--inner, .reg--item:focus .item--inner {
+.reg--item:hover .item--img, .reg--item:focus .item--img {
   transform: scale(1.05);
   transition: all 220ms ease-in-out;
 }
@@ -70,20 +71,6 @@ body {
   width: 100%;
   z-index: 3;
   transition: all 220ms ease-in-out;
-}
-
-.item--inner {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  transform: none;
-  transition: all 220ms ease-in-out;
-  z-index: 2;
 }
 
 .item--text {
@@ -117,6 +104,13 @@ body {
   transition: all 220ms ease-in-out;
 }
 
+.item--img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 220ms ease-in-out;
+}
+
 .grid--intro {
   grid-column: 1/-1;
   grid-row-end: span 2;
@@ -132,7 +126,7 @@ body {
   font-weight: 700;
   text-align: left;
   max-width: 700px;
-  letter-spacing: -2px;
+  letter-spacing: -4px;
 }
 
 .intro--text {
@@ -142,7 +136,7 @@ body {
   font-weight: 300;
   line-height: 1.5;
   max-width: 700px;
-  letter-spacing: 0;
+  letter-spacing: -1px;
 }
 
 @media screen and (min-width: 767px) {
@@ -162,90 +156,6 @@ body {
     font-size: 1.4rem;
   }
 }
-.item--1 {
-  background-image: url(https://images.unsplash.com/photo-1499781350541-7783f6c6a0c8?ixlib=rb-0.3.5&s=44608053c9aec36fffb639e3936884ac&auto=format&fit=crop&w=2015&q=80);
-}
-
-.item--2 {
-  background-image: url(https://images.unsplash.com/photo-1501421018470-faf26f6b1bef?ixlib=rb-0.3.5&s=aece461743812241e24a9528dc0fdb64&auto=format&fit=crop&w=1950&q=80);
-}
-
-.item--3 {
-  background-image: url(https://images.unsplash.com/photo-1503259901638-6bf44a4cd670?ixlib=rb-0.3.5&s=1d35913f04b30cf5027fe2f09a7371d9&auto=format&fit=crop&w=1294&q=80);
-}
-
-.item--4 {
-  background-image: url(https://images.unsplash.com/photo-1491403938640-b57372002c94?ixlib=rb-0.3.5&s=2835b62d602bfedee80fafb60a90dc19&auto=format&fit=crop&w=1350&q=80);
-}
-
-.item--5 {
-  background-image: url(https://images.unsplash.com/photo-1502210220257-b267d9c86214?ixlib=rb-0.3.5&s=a856ee8f49413731084c1d113d330bc4&auto=format&fit=crop&w=1350&q=80);
-}
-
-.item--6 {
-  background-image: url(https://images.unsplash.com/photo-1490487135801-031cf13ab462?ixlib=rb-0.3.5&s=b424db189618b2b9dbdd222fca08e6b5&auto=format&fit=crop&w=1352&q=80);
-}
-
-.item--7 {
-  background-image: url(https://images.unsplash.com/photo-1501569420805-e4dd535ec970?ixlib=rb-0.3.5&s=f9fc15799cbd406b806ea8e306381e43&auto=format&fit=crop&w=1350&q=80);
-}
-
-.item--8 {
-  background-image: url(https://images.unsplash.com/photo-1463277261818-d24c3cdbe40e?ixlib=rb-0.3.5&s=9a19eee02877074ccb33e9e669f10dab&auto=format&fit=crop&w=634&q=80);
-}
-
-.item--9 {
-  background-image: url(https://images.unsplash.com/photo-1497033110244-bb22d252704e?ixlib=rb-0.3.5&s=0563070b66661f968073a5ea4f96af99&auto=format&fit=crop&w=1371&q=80);
-}
-
-.item--10 {
-  background-image: url(https://images.unsplash.com/photo-1514575619841-1a3d949d3277?ixlib=rb-0.3.5&s=cd492506d8101a9382bf1359ac955c75&auto=format&fit=crop&w=564&q=80);
-}
-
-.item--11 {
-  background-image: url(https://images.unsplash.com/photo-1502868032459-aa78309e3503?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a6cda7a50c043155f3c0a9b6960a9eff&auto=format&fit=crop&w=1350&q=80);
-}
-
-.item--12 {
-  background-image: url(https://images.unsplash.com/photo-1453814235491-3cfac3999928?ixlib=rb-0.3.5&s=528b061cef02f0c33c50f2b05e8b5619&auto=format&fit=crop&w=1350&q=80);
-}
-
-.item--13 {
-  background-image: url(https://images.unsplash.com/photo-1495482432709-15807c8b3e2b?ixlib=rb-0.3.5&s=6d360685125b642b273028564997fbc3&auto=format&fit=crop&w=1352&q=80);
-}
-
-.item--14 {
-  background-image: url(https://images.unsplash.com/photo-1517696600874-1d19b7e42b21?ixlib=rb-0.3.5&s=94d7c303227a36ca61313291559a9626&auto=format&fit=crop&w=1950&q=80);
-}
-
-.item--15 {
-  background-image: url(https://images.unsplash.com/photo-1498484350622-344a7eab522f?ixlib=rb-0.3.5&s=4aaa35d2dcceebfbf91e8a770a67f6e4&auto=format&fit=crop&w=1350&q=80);
-}
-
-.item--16 {
-  background-image: url(https://images.unsplash.com/photo-1490535004195-099bc723fa1f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=53d16e51c95625168dde435dbd0aaa45&auto=format&fit=crop&w=1480&q=80);
-}
-
-.item--17 {
-  background-image: url(https://images.unsplash.com/photo-1504685641750-680d1a6a5536?ixlib=rb-0.3.5&s=8f6fa37ef4f22205aae60998daf165f1&auto=format&fit=crop&w=800&q=80);
-}
-
-.item--18 {
-  background-image: url(https://images.unsplash.com/photo-1505868900972-a7ed025e680b?ixlib=rb-0.3.5&s=9c76413dbf299dae03c8b2aeb6db39a5&auto=format&fit=crop&w=1350&q=80);
-}
-
-.item--19 {
-  background-image: url(https://images.unsplash.com/photo-1508341421810-36b8fc06075b?ixlib=rb-0.3.5&s=40aa58c6e0450d4e2e4b7da8a440afe5&auto=format&fit=crop&w=2567&q=80);
-}
-
-.item--20 {
-  background-image: url(https://images.unsplash.com/photo-1503442421232-da6e4efd1d23?ixlib=rb-0.3.5&s=2a32e84e3e6d26670d3e87ac54edb998&auto=format&fit=crop&w=1343&q=80);
-}
-
-.item--21 {
-  background-image: url(https://images.unsplash.com/photo-1505771582525-59a79c60af24?ixlib=rb-0.3.5&s=44d17c15b3bd53bc97a6ce7c53579649&auto=format&fit=crop&w=2689&q=80);
-}
-
 .centering {
   display: block;
   width: 100%;
@@ -313,4 +223,31 @@ body {
   width: 0;
   overflow: hidden;
   animation: load-out 660ms ease-out forwards;
+}
+
+.load--more {
+  margin: 3rem auto;
+  display: block;
+  padding: .8rem 3rem;
+  font-family: 'Helvetica Neue', 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 1rem;
+  background: linear-gradient(to right, rgba(255, 40, 222, 0.9), rgba(89, 0, 255, 0.9));
+  color: white;
+  border: 3px solid white;
+  border-radius: 30px;
+  transition: all 220ms ease-in-out;
+  transform: none;
+}
+.load--more:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+  transition: transform 220ms ease-in-out;
+}
+
+.hidden {
+  opacity: 0;
+  height: 0;
+  position: absolute;
+  transform: translateY(-1rem);
 }
